--- a/templates/tasks/task_edit.html
+++ b/templates/tasks/task_edit.html
@@ -7,45 +7,33 @@
 <body>
 <form id="task_form" method="get" action="{% url 'task_edit' %}?id={{ group_id }}" class="form-horizontal">
     <div class="form-group">
-        <label class="control-label col-sm-2">组名<span class="text-red">*</span>：</label>
+        <label class="control-label col-sm-2">任务名：</label>
         <div class="col-sm-8">
-            {{ task_form.name }}
+            {{ task.task_name }}
         </div>
     </div>
+
     <div class="hr-line-dashed"></div>
     <div class="form-group">
-        <label class="control-label col-md-2">用户<span class="text-red">*</span>：</label>
-        <div class="col-sm-3">
-            <select id="users_no_selected" name="users" size="12" class="form-control m-b" multiple>
-                {% for user in users_no_selected %}
-                    <option value="{{ user.id }}">{{ user.username }}</option>
-                {% endfor %}
-            </select>
-        </div>
-        <div class="col-sm-1">
-            <div class="btn-group" style="margin-top: 50px;">
-                <button type="button" class="btn btn-white" style="margin-bottom: 5px;"
-                        onclick="move('users_no_selected', 'users_selected')"><i
-                        class="fa fa-chevron-right"></i></button>
-                <button type="button" class="btn btn-white" onclick="move('users_selected', 'users_no_selected')"><i
-                        class="fa fa-chevron-left"></i></button>
-            </div>
-        </div>
-        <div class="col-sm-4">
-            <div>
-                <select id="users_selected" name="users_selected" class="form-control m-b" size="12" multiple>
-                    {% for user in users_selected %}
-                        <option value="{{ user.id }}">{{ user.username }}</option>
-                    {% endfor %}
-                </select>
-            </div>
+        <label class="control-label col-sm-2">任务类型：</label>
+        <div class="col-sm-8">
+            {{ task.task_type }}
         </div>
     </div>
+
     <div class="hr-line-dashed"></div>
     <div class="form-group">
-        <label class="control-label col-sm-2">备注：</label>
+        <label class="control-label col-sm-2">申请人：</label>
         <div class="col-sm-8">
-            {{ task_form.comment }}
+            {{ task.task_applyer_name }}
+        </div>
+    </div>
+
+    <div class="hr-line-dashed"></div>
+    <div class="form-group">
+        <label class="control-label col-sm-2">任务描述：</label>
+        <div class="col-sm-8">
+            {{ task.task_desc }}
         </div>
     </div>
 </form>
