--- a/templates/tasks/task_search.html
+++ b/templates/tasks/task_search.html
@@ -5,7 +5,7 @@
         <div class="col-md-12">
             <div class="box">
                 <div class="box-header with-border">
-                    <h3 class="box-title">查看用户</h3>
+                    <h3 class="box-title">查看任务</h3>
 
                     <div class="box-tools pull-right">
                         <button type="button" class="btn btn-box-tool" data-widget="collapse"><i
@@ -23,12 +23,10 @@
                 <div class="box-body">
                     <div class="table-responsive">
                         <div id="toolbar">
-                            <a href="{% url 'user_add' %}" class="btn btn-sm btn-default">
-                                <i class="fa fa-plus"></i> 添加用户
-                            </a>
-                            <button id="btn_remove" class="btn btn-sm btn-danger">
-                                <i class="fa fa-trash-o"></i> 批量删除
-                            </button>
+
+{#                            <button id="btn_remove" class="btn btn-sm btn-danger">#}
+{#                                <i class="fa fa-trash-o"></i> 批量删除#}
+{#                            </button>#}
                         </div>
                         <table id="table">
                         </table>
@@ -74,7 +72,7 @@
                     }
                 },
                 method: 'get',
-                url: '{% url 'user_getlist' %}',
+                url: '{% url 'get_task_list' %}',
                 toolbar: '#toolbar',
                 //指定主键列
                 idField: 'id',
@@ -105,35 +103,44 @@
                         visible: false
                     },
                     {
-                        field: 'username',
-                        title: '用户名',
+                        field: 'task_name',
+                        title: '任务名',
                         sortable: true,
-                        align: 'center',
-                        formatter: nameFormatter
+                        align: 'center'
                     }
                     , {
-                        field: 'name',
-                        title: '姓名',
+                        field: 'task_type',
+                        title: '任务类型',
                         align: 'center'
                     }
 
                     , {
-                        field: 'group',
-                        title: '小组',
+                        field: 'task_desc',
+                        title: '描述',
                         align: 'center'
                     }
                     , {
-                        field: 'role',
-                        title: '角色',
+                        field: 'task_applyer_name',
+                        title: '申请人',
                         align: 'center'
                     }
                     , {
-                        field: 'email',
-                        title: '邮箱',
+                        field: 'task_approve_name',
+                        title: '审批人',
                         align: 'center'
                     }
                     , {
-                        field: 'is_active',
+                        field: 'apply_time',
+                        title: '申请时间',
+                        align: 'center'
+                    }
+                    , {
+                        field: 'finish_time',
+                        title: '完成时间',
+                        align: 'center'
+                    }
+                    , {
+                        field: 'is_finished',
                         title: '状态',
                         align: 'center',
                         formatter: activeFormatter
@@ -153,101 +160,110 @@
             return $(window).height() - $('h1').outerHeight(true);
         }
 
-        function nameFormatter(value, row, index) {
-            return [
-                '<a href="{% url 'user_profile' %}?uid=' + row.id + '">',
-                value + '</a>',
-            ].join('');
-        }
 
         //操作列方法
         function operateFormatter(value, row, index) {
             return [
-                '<a class="btn btn-xs btn-default" href="{% url 'user_edit' %}?id=' + row.id + '">',
-                '<i class="fa fa-edit"></i> 编辑</a> ',
-                '<a class="remove btn btn-xs btn-danger" href="javascript:void(0)" title="Remove">',
-                '<i class="fa fa-trash-o"></i> 删除',
-                '</a>'
+                '<a class="edit btn btn-xs btn-default" href="javascript:void(0)" title="edit">',
+                '<i class="fa fa-tasks"></i> 详情</a> ',
+
             ].join('');
         }
         //状态列
         function activeFormatter(value, row, index) {
             //alert(value);
             s = '';
-            if (value == true) {
-                s = '是';
+            if (value == 1) {
+                s = "<span style='color:blue;'>已审批</span>";
             }
             else {
-                s = "<span style='color:red;'>否</span>";
+                s = "<span style='color:red;'>待审批</span>";
             }
             return s;
         }
-
         window.operateEvents = {
-            'click .remove': function (e, value, row, index) {
-                BootstrapDialog.confirm({
-                    title: "警告",
-                    type: BootstrapDialog.TYPE_WARNING,
-                    message: "确定删除用户 <span class='red'>" + row.name + "</span> 吗？",
-                    draggable: true,
-                    btnCancelLabel: '放弃',
-                    btnCancelClass: 'btn-white',
-                    btnOKLabel: '确认',
-                    callback: function (result) {
-                        if (result) {
-                            var ids = [row.id];
-                            $.post("{% url 'user_del' %}", {ids: ids}, function (data) {
-                                    if (data.code != 0) {
-                                        $table.bootstrapTable("refresh");
-                                        dialogItself.close();
-                                    }
-                                    else BootstrapDialog.alert(data.message);
-
-                                }, "json"
-                            );
-                        }
-                    }
-                });
-            }
+             'click .edit': function (e, value, row, index) {
+                Edit(row.id);
+            },
         };
+        function Edit(id) {
+            var addDialog = new BootstrapDialog({
+                    title: "任务详情",
+                    message: function (dialog) {
+                        var $message = $('<div></div>');
+                        var pageToLoad = dialog.getData('pageToLoad');
+                        $message.load(pageToLoad);
+
+                        return $message;
+                    },
+                    data: {
+                        'pageToLoad': "{% url 'task_edit' %}?id=" + id
+                    },
+{#                    buttons: [{#}
+{#                        cssClass: "btn-default",#}
+{#                        label: "通过",#}
+{#                        action: function (dialogItself) {#}
+{#                            ////提交表单数据之前，先选中右侧#}
+{#                            $('#users_selected option').each(function () {#}
+{#                                $(this).prop('selected', true)#}
+{#                            });#}
+{##}
+{#                            /*$("#group_from").validator({#}
+{#                             valid: function (form) {#}
+{#                             form.submit();#}
+{#                             }#}
+{#                             });*/#}
+{##}
+{#                        }#}
+{#                    }, {#}
+{#                        label: "拒绝",#}
+{#                        cssClass: 'btn-white',#}
+{#                        action: function (dialogItself) {#}
+{#                            dialogItself.close();#}
+{#                        }#}
+{#                    }]#}
+                })
+            ;
+            addDialog.open();
+        }
 
         $(function () {
             //初始化表格
             initTable();
 
             // delete button
-            $("#btn_remove").click(function () {
-                var selected = $table.bootstrapTable('getSelections');
-                if ($(selected).length > 0) {
-                    BootstrapDialog.confirm({
-                        title: "警告",
-                        message: "确定删除选中的" + $(selected).length + "个用户吗？",
-                        type: BootstrapDialog.TYPE_SUCCESS,
-                        btnCancelLabel: '放弃',
-                        btnCancelClass: 'btn-white',
-                        btnOKLabel: '确认',
-                        //btnOKClass: 'btn-default',
-                        callback: function (result) {
-                            if (result) {
-                                var ids = new Array($(selected).length);
-                                $.each(selected, function (index, value) {
-                                    ids[index] = value.id;
-                                });
-                                $.post("{% url 'user_del' %}", {ids: ids}, function (data) {
-                                        if (data.code != 0) {
-                                            $table.bootstrapTable("refresh");
-                                            dialogItself.close();
-                                        }
-                                        else BootstrapDialog.alert(data.message);
-
-                                    }, "json"
-                                );
-                            }
-                        }
-                    });
-                }
-                else BootstrapDialog.warning("请选择要删除的行");
-            });
+{#            $("#btn_verify").click(function () {#}
+{#                var selected = $table.bootstrapTable('getSelections');#}
+{#                if ($(selected).length > 0) {#}
+{#                    BootstrapDialog.confirm({#}
+{#                        title: "警告",#}
+{#                        message: "确定删除选中的" + $(selected).length + "任务吗？",#}
+{#                        type: BootstrapDialog.TYPE_WARNING,#}
+{#                        btnCancelLabel: '放弃',#}
+{#                        btnCancelClass: 'btn-white',#}
+{#                        btnOKLabel: '确认',#}
+{#                        //btnOKClass: 'btn-default',#}
+{#                        callback: function (result) {#}
+{#                            if (result) {#}
+{#                                var ids = new Array($(selected).length);#}
+{#                                $.each(selected, function (index, value) {#}
+{#                                    ids[index] = value.id;#}
+{#                                });#}
+{#                                $.post("{% url 'user_del' %}", {ids: ids}, function (data) {#}
+{#                                        if (data.code != 0) {#}
+{#                                            $table.bootstrapTable("refresh");#}
+{#                                            dialogItself.close();#}
+{#                                        }#}
+{#                                        else BootstrapDialog.alert(data.message);#}
+{##}
+{#                                    }, "json"#}
+{#                                );#}
+{#                            }#}
+{#                        }#}
+{#                    });#}
+{#                }#}
+{#                else BootstrapDialog.warning("请选择要删除的行");#}
+{#            });#}
         });
     </script>
 {% endblock %}
