--- a/templates/_nav.html
+++ b/templates/_nav.html
@@ -113,13 +113,13 @@
                 </ul>
             </li>
 
-    <li class="{{ library_active }}">
-        <a href="#"><i class="fa fa-y-combinator-square"></i> <span class="nav-label">技术文档</span>
-            <span  class="fa arrow"> </span></a>
-        <ul class="nav nav-second-level">
-             <li  class="{{ library_list_active }}"><a href="{% url 'library_list' %}">文档列表</a></li>
-        </ul>
-    </li>
+{#    <li class="{{ library_active }}">#}
+{#        <a href="#"><i class="fa fa-y-combinator-square"></i> <span class="nav-label">技术文档</span>#}
+{#            <span  class="fa arrow"> </span></a>#}
+{#        <ul class="nav nav-second-level">#}
+{#             <li  class="{{ library_list_active }}"><a href="{% url 'library_list' %}">文档列表</a></li>#}
+{#        </ul>#}
+{#    </li>#}
 
 
 </ul>
