--- a/templates/mysql/tools-update.html
+++ b/templates/mysql/tools-update.html
@@ -47,7 +47,7 @@
 
                         <div class="form-group">
                             <div class="col-sm-10 col-sm-offset-0">
-                                {% bootstrap_field form.env_type layout="horizontal" %}
+                                {% bootstrap_field form.envr_type layout="horizontal" %}
                                 {% bootstrap_field form.name layout="horizontal" %}
                                 {% bootstrap_field form.tool_script layout="horizontal" %}
                                 {% bootstrap_field form.tool_run_type layout="horizontal" %}
