--- a/templates/users/user_list.html
+++ b/templates/users/user_list.html
@@ -30,6 +30,38 @@
                                 <i class="fa fa-trash-o"></i> 批量删除
                             </button>
                         </div>
+{#                        <div class="box-body">#}
+{#                  <table class="table table-striped table-bordered" id="dataform">#}
+{#                      <thead>#}
+{#                        <tr>#}
+{#                            <th>用户名</th>#}
+{#                            <th>姓名</th>#}
+{#                            <th>小组</th>#}
+{#                            <th>角色</th>#}
+{#                            <th>邮箱</th>#}
+{#                            <th>状态</th>#}
+{#                            <th>操作</th>#}
+{#                        </tr>#}
+{#                      </thead>#}
+{#                            <tbody>#}
+{#                            {% for i in user_list %}#}
+{#                                <tr style="font-size: 13px;">#}
+{#                                    <td>{{ i.username }} </td>#}
+{#                                    <td>{{ i.name }} </td>#}
+{#                                    <td>{{ i.group }} </td>#}
+{#                                    <td>{{ i.role }} </td>#}
+{#                                    <td>{{ i.email }} </td>#}
+{#                                    <td>{{ i.is_active }} </td>#}
+{##}
+{#                                    <td>#}
+{#                                        <a href="{% url 'user_edit' %}?id=' + row.id + '"><span class="btn btn-sm btn-info">编辑</span></a>#}
+{#                                        <a href="{% url "user_del"  %}?id=' + row.id + '" onclick="return confirm('确认删除角色吗？？')"><span class="btn btn-sm btn-danger ">删除</span></a>#}
+{#                                    </td>#}
+{#                                </tr>#}
+{#                            {% endfor %}#}
+{#                            </tbody>#}
+{#                  </table>#}
+{#                </div>#}
                         <table id="table">
                         </table>
 
@@ -61,18 +93,18 @@
         function initTable() {
             $table.bootstrapTable({
                 //绑定右键菜单
-                contextMenu: '#context-menu',
-                onContextMenuItem: function (row, $el) {
-                    if ($el.data("item") == "edit") {
-                        alert("Edit: " + row.id + ' ' + row.name + ' ' + row.price);
-                    } else if ($el.data("item") == "delete") {
-                        alert("Delete: " + row.id + ' ' + row.name + ' ' + row.price);
-                    } else if ($el.data("item") == "action1") {
-                        alert("Action1: " + row.id + ' ' + row.name + ' ' + row.price);
-                    } else if ($el.data("item") == "action2") {
-                        alert("Action2: " + row.id + ' ' + row.name + ' ' + row.price);
-                    }
-                },
+{#                contextMenu: '#context-menu',#}
+{#                onContextMenuItem: function (row, $el) {#}
+{#                    if ($el.data("item") == "edit") {#}
+{#                        alert("Edit: " + row.id + ' ' + row.name + ' ' + row.price);#}
+{#                    } else if ($el.data("item") == "delete") {#}
+{#                        alert("Delete: " + row.id + ' ' + row.name + ' ' + row.price);#}
+{#                    } else if ($el.data("item") == "action1") {#}
+{#                        alert("Action1: " + row.id + ' ' + row.name + ' ' + row.price);#}
+{#                    } else if ($el.data("item") == "action2") {#}
+{#                        alert("Action2: " + row.id + ' ' + row.name + ' ' + row.price);#}
+{#                    }#}
+{#                },#}
                 method: 'get',
                 url: '{% url 'user_getlist' %}',
                 toolbar: '#toolbar',
@@ -141,8 +173,8 @@
                         field: 'operate',
                         title: '操作',
                         align: 'center',
-                        events: operateEvents,
-                        formatter: operateFormatter
+                        events: 'operateEvents',
+                        formatter: operateFormatter,
                     }
 
                 ]
