--- a/templates/_foot_js.html
+++ b/templates/_foot_js.html
@@ -6,17 +6,17 @@
     $.widget.bridge('uibutton', $.ui.button);
 </script>
 <!-- uploadfile -->
-<script src="/static/js/jquery-3.1.1.min.js"></script>
+{#<script src="/static/js/jquery-3.1.1.min.js"></script>#}
 <script src="/static/js/bootstrap.min.js"></script>
 <script src="/static/js/jquery-file-upload/vendor/jquery.ui.widget.js"></script>
 <script src="/static/js/jquery-file-upload/jquery.iframe-transport.js"></script>
 <script src="/static/js/jquery-file-upload/jquery.fileupload.js"></script>
-<script src="/static/js/bootstrap/bootstrap.min.js"></script>
+{#<script src="/static/js/bootstrap/bootstrap.min.js"></script>#}
 <script src="/static/plugins/bootstrap-table/bootstrap-table.min.js"></script>
 <script src="/static/plugins/bootstrap-table/locale/bootstrap-table-zh-CN.min.js"></script>
 <script src="/static/plugins/bootstrap-table/extensions/export/bootstrap-table-export.min.js"></script>
 <script src="/static/plugins/tableExport.jquery.plugin/tableExport.min.js"></script>
-<script src="/static/plugins/bootstrap-dialog/js/bootstrap-dialog.min.js"></script>
+{#<script src="/static/plugins/bootstrap-dialog/js/bootstrap-dialog.min.js"></script>#}
 <script src="/static/js/nicescroll/jquery.nicescroll.min.js"></script>
 <script src="/static/js/slimScroll/jquery.slimscroll.min.js"></script>
 <script src="/static/js/fastclick/fastclick.js"></script>
