--- a/templates/_nav_bar_header2.html
+++ b/templates/_nav_bar_header2.html
@@ -45,7 +45,7 @@
                         </a>
                     </li>
                     <li>
-                        <a id="logout" href="javascript:void(0);" class="c-nav-out" style="height: 40px;
+                        <a id="logout" href="/logout" class="c-nav-out" style="height: 40px;
     line-height: 40px;padding: 3px 10px;">
                             <i class="fa fa-sign-out mr5 f20"></i>
                             <span>注销</span>
