--- a/templates/mysql/tools-add.html
+++ b/templates/mysql/tools-add.html
@@ -56,6 +56,7 @@
                                 {% bootstrap_field form.tool_script layout="horizontal" %}
                                 {% bootstrap_field form.tool_run_type layout="horizontal" %}
                                 {% bootstrap_field form.comment layout="horizontal" %}
+                                <a style="display:none;" >{% bootstrap_field form.is_finished layout="horizontal" %}</a>
                             </div> </div>
 
                         <div class="hr-line-dashed"></div>
@@ -77,7 +78,7 @@
 
 
     {% block footer-js %}
-
+{#        <script src="/static/js/jquery-2.2.3.min.js"></script>#}
         <script src="{% static  "js/plugins/codemirror/codemirror.js" %}"></script>
         <script src="{% static "js/plugins/codemirror/mode/shell.js" %}"></script>
         <script src="{% static "js/plugins/codemirror/mode/python.js" %}"></script>
