--- a/templates/mysql/tools-update.html
+++ b/templates/mysql/tools-update.html
@@ -70,7 +70,7 @@
 
 
     {% block footer-js %}
-
+        <script src="/static/js/jquery-2.2.3.min.js"></script>
         <script src="{% static  "js/plugins/codemirror/codemirror.js" %}"></script>
         <script src="{% static "js/plugins/codemirror/mode/shell.js" %}"></script>
         <script src="{% static "js/plugins/codemirror/mode/python.js" %}"></script>
