隔离人员的任务

--- a/templates/_nav.html
+++ b/templates/_nav.html
@@ -48,7 +48,7 @@
         <ul class="treeview-menu">
             <li class="tasklist"><a href="{% url 'task' %}"><i class="fa fa-circle-o"></i> 任务管理</a></li>
             <li class="taskadd"><a href="{% url 'task_add' %}"><i class="fa fa-circle-o"></i> 创建任务</a></li>
-            <li class="tasksearch"><a href="{% url 'task_search' %}"><i class="fa fa-circle-o"></i> 查询任务</a></li>
+{#            <li class="tasksearch"><a href="{% url 'task_search' %}"><i class="fa fa-circle-o"></i> 查询任务</a></li>#}
 {#            <li class="taskdetail"><a href="{% url 'task_detail' %}"><i class="fa fa-circle-o"></i> 测试专用</a></li>#}
             <li class="taskmyself"><a href="{% url 'task_myself' %}"><i class="fa fa-circle-o"></i> 我的申请</a></li>
             <li class="tasktodo"><a href="{% url 'task_todo' %}"><i class="fa fa-circle-o"></i> 待办任务</a></li>
