js 冲突显示不了审批按钮

--- a/templates/_foot_js.html
+++ b/templates/_foot_js.html
@@ -16,7 +16,7 @@
 <script src="/static/plugins/bootstrap-table/locale/bootstrap-table-zh-CN.min.js"></script>
 <script src="/static/plugins/bootstrap-table/extensions/export/bootstrap-table-export.min.js"></script>
 <script src="/static/plugins/tableExport.jquery.plugin/tableExport.min.js"></script>
-{#<script src="/static/plugins/bootstrap-dialog/js/bootstrap-dialog.min.js"></script>#}
+<script src="/static/plugins/bootstrap-dialog/js/bootstrap-dialog.min.js"></script>
 <script src="/static/js/nicescroll/jquery.nicescroll.min.js"></script>
 <script src="/static/js/slimScroll/jquery.slimscroll.min.js"></script>
 <script src="/static/js/fastclick/fastclick.js"></script>
