数据库一栏进行人员界面区别展示

--- a/templates/mysql/tools-add.html
+++ b/templates/mysql/tools-add.html
@@ -57,6 +57,7 @@
                                 {% bootstrap_field form.tool_run_type layout="horizontal" %}
                                 {% bootstrap_field form.comment layout="horizontal" %}
                                 <a style="display:none;" >{% bootstrap_field form.is_finished layout="horizontal" %}</a>
+{#                                <a style="display:none;" >{% bootstrap_field form.applyer_name layout="horizontal" %}</a>#}
                             </div> </div>
 
                         <div class="hr-line-dashed"></div>
