--- a/templates/mysql/tools-normal.html
+++ b/templates/mysql/tools-normal.html
@@ -72,7 +72,7 @@
                                             <td class="center">{% ifequal  row.envr_type  0 %} dev{% endifequal  %} {% ifequal  row.envr_type  1 %} test {% endifequal  %}  {% ifequal row.envr_type  2 %}  stable {%  endifequal%}
                                             {% ifequal row.envr_type  3 %}  pre {%  endifequal%} {% ifequal row.envr_type  4 %}  prod {%  endifequal%}</td>
 
-                                            <td class="center">  sql </td>
+                                            <td class="center">{% ifequal  row.tool_run_type  0 %} shell{% endifequal  %} {% ifequal  row.tool_run_type  1 %} python {% endifequal  %}  {% ifequal row.tool_run_type  2 %}  sql {%  endifequal%}  </td>
                                             <td class="center">{{ row.comment }}</td>
                                             <td class="center">{{ row.utime }}</td>
                                             <td class="center">{% ifequal row.is_finished 0 %} <div style="color:red;">未执行</div> {% endifequal  %} {% ifequal row.is_finished 1 %} <div style="color:blue;">已执行</div> {% endifequal  %}</td>
@@ -82,12 +82,12 @@
                                                 <a class="btn btn-primary  btn-xs "
                                                    href="{% url  'tools_update'  row.id   %}">编辑</a>
 
-                                                <button type="button" class="btn btn-danger  btn-xs  scripts_success" data-toggle="modal"
-                                                        data-target="#myModalscript">完成
-                                                </button>
-                                                <button type="button" class="btn btn-danger  btn-xs  tools_del_id" data-toggle="modal"
-                                                        data-target="#myModal1">删除
-                                                </button>
+{#                                                <button type="button" class="btn btn-danger  btn-xs  scripts_success" data-toggle="modal"#}
+{#                                                        data-target="#myModalscript">完成#}
+{#                                                </button>#}
+{#                                                <button type="button" class="btn btn-danger  btn-xs  tools_del_id" data-toggle="modal"#}
+{#                                                        data-target="#myModal1">删除#}
+{#                                                </button>#}
                                             </td>
                                         </tr>
                                     {% endfor %}
